Probleme de CORS, python manage.py runserver ne marche pas, pas d'acces au page d admin du backend

--- a/sasha_env/pyvenv.cfg
+++ b/sasha_env/pyvenv.cfg
@@ -1,3 +1,3 @@
-home = /Library/Frameworks/Python.framework/Versions/3.9/bin
+home = /Users/drakon/Desktop/Terra_Nostra_projet-stage/Django_backend/sasha_env/bin
 include-system-site-packages = false
 version = 3.9.6
